--- a/twincolgrid-demo/pom.xml
+++ b/twincolgrid-demo/pom.xml
@@ -3,10 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+    	<groupId>com.flowingcode.vaadin.addons</groupId>
+    	<artifactId>twincolgrid-addon</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+	</parent>
+
 	<groupId>com.flowingcode.vaadin.addons</groupId>
 	<artifactId>twincolgrid-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.0.0-SNAPSHOT</version>
 	<name>TwinColGrid add-on demo</name>
 
 	<prerequisites>
