--- a/twincolgrid/pom.xml
+++ b/twincolgrid/pom.xml
@@ -52,7 +52,7 @@
    <repositories>
         <repository>
             <id>vaadin-addons</id>
-            <url>http://maven.vaadin.com/vaadin-addons</url>
+            <url>https://maven.vaadin.com/vaadin-addons</url>
         </repository>
     </repositories>
     
@@ -186,7 +186,7 @@
             <repositories>
                 <repository>
                     <id>vaadin-prereleases</id>
-                    <url>http://maven.vaadin.com/vaadin-prereleases</url>
+                    <url>https://maven.vaadin.com/vaadin-prereleases</url>
                 </repository>
                 <repository>
                     <id>vaadin-snapshots</id>
@@ -202,7 +202,7 @@
             <pluginRepositories>
                 <pluginRepository>
                     <id>vaadin-prereleases</id>
-                    <url>http://maven.vaadin.com/vaadin-prereleases</url>
+                    <url>https://maven.vaadin.com/vaadin-prereleases</url>
                 </pluginRepository>
                 <pluginRepository>
                     <id>vaadin-snapshots</id>
