--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>2.0.0-SNAPSHOT</version>
 	<name>TwinColGrid Add-on Project</name>
     <properties>
-        <vaadin.version>14.0.0.rc3</vaadin.version>
+        <vaadin.version>14.1.16</vaadin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
