--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.flowingcode.vaadin.addons</groupId>
-	<artifactId>twincolgrid-addon</artifactId>
+	<artifactId>twincolgrid</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
-	<name>TwinColGrid Add-on Project</name>
+	<name>TwinColGrid Add-on</name>
     <properties>
         <vaadin.version>14.1.16</vaadin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
