--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.flowingcode.vaadin.addons</groupId>
 	<artifactId>twincolgrid</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
-	<name>TwinColGrid Add-on</name>
+	<name>TwinColGrid add-on</name>
     <properties>
         <vaadin.version>14.1.16</vaadin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
