--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
 						<licenseName>apache_v2</licenseName>
 					</configuration>
 			   </plugin>
+			   <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M3</version>
+				</plugin>
 		   </plugins>
 		</pluginManagement>			   
 
