Added select row on click feature

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
 					<supportedPackagings>
 						<supportedPackaging>jar</supportedPackaging>
                     </supportedPackagings>
+                    <webAppConfig>
+                        <resourceBases>
+	                        <resourceBase>src/test/resources/META-INF/resources</resourceBase>
+	                        <resourceBase>src/main/resources/META-INF/resources</resourceBase>
+	                    </resourceBases>
+                    </webAppConfig>
                 </configuration>
             </plugin>
         </plugins>
