--- a/pom.xml
+++ b/pom.xml
@@ -252,5 +252,25 @@
                 </plugins>
             </build>
         </profile>
+		
+		<profile>
+			<id>jar-demo</id>
+            <build>		
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>test-jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
     </profiles>
 </project>
