--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,7 @@
 										<exclude>**/test/*</exclude>
 										<exclude>**/integration/*</exclude>
 										<exclude>**/DemoView.class</exclude>
+										<exclude>**/DemoLayout.class</exclude>
 									</excludes>
 								</configuration>
 							</execution>
