--- a/pom.xml
+++ b/pom.xml
@@ -308,5 +308,37 @@
 			</build>
 		</profile>
 		
+		<profile>
+			<id>v24</id>
+			<properties>
+				<maven.compiler.source>17</maven.compiler.source>
+				<maven.compiler.target>17</maven.compiler.target>
+				<vaadin.version>24.0.0.alpha6</vaadin.version>
+				<jetty.version>11.0.12</jetty.version>
+			</properties>
+			<repositories>
+				<repository>
+					<id>vaadin-prerelease</id>
+					<url>https://maven.vaadin.com/vaadin-prereleases</url>
+				</repository>
+			</repositories>
+			<pluginRepositories>
+				<pluginRepository>
+					<id>vaadin-prerelease</id>
+					<url>https://maven.vaadin.com/vaadin-prereleases</url>
+				</pluginRepository>
+			</pluginRepositories>
+
+			<dependencies>
+				<dependency>
+					<groupId>jakarta.servlet</groupId>
+					<artifactId>jakarta.servlet-api</artifactId>
+					<version>6.0.0</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
+			
+		</profile>
+		
     </profiles>
 </project>
