--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,10 @@
 	<groupId>com.flowingcode.vaadin.addons</groupId>
 	<artifactId>twincolgrid</artifactId>
 	<version>2.9.3-SNAPSHOT</version>
-	<name>TwinColGrid add-on</name>
+	<name>TwinColGrid</name>
+	<description>Dual list component based on Vaadin Grids</description>
+	<url>https://www.flowingcode.com/en/open-source/</url>
+	
     <properties>
         <vaadin.version>14.9.7</vaadin.version>
         <maven.compiler.source>1.8</maven.compiler.source>
