--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,9 @@
 								<goals>
 									<goal>sign</goal>
 								</goals>
+								<configuration>
+									<passphrase>${env.gpg.passphrase}</passphrase>
+								</configuration>								
 							</execution>
 						</executions>
 					</plugin>
