--- a/pom.xml
+++ b/pom.xml
@@ -256,10 +256,10 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
+                   <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.11.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -272,6 +272,10 @@
                         <configuration>
                             <quiet>true</quiet>
                             <doclint>none</doclint>
+                            <failOnWarnings>false</failOnWarnings>
+                            <links>
+                                <link>https://javadoc.io/doc/com.vaadin/vaadin-platform-javadoc/${vaadin.version}</link>
+                            </links>
                         </configuration>
                     </plugin>
                     <plugin>
