--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ types.d.ts
 /frontend/index.html
 vite.generated.ts
 /src/main/dev-bundle
+/src/main/bundles
+/src/main/frontend/generated
+/src/main/frontend/index.html
