ci: update workflow for new major version

--- a/.github/workflows/maven-v3.yml
+++ b/.github/workflows/maven-v3.yml
@@ -10,11 +10,37 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "v3.x" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "v3.x" ]
 
 jobs:
+  build-vaadin14:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '8'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build (Vaadin 14)
+      run: mvn -B package --file pom.xml
+      
+  build-vaadin23:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build (Vaadin 23)
+      run: mvn -B package --file pom.xml -Pv23
+
   build-vaadin24:
     runs-on: ubuntu-latest
     steps:
@@ -27,16 +53,3 @@ jobs:
         cache: maven
     - name: Build (Vaadin 24)
       run: mvn -B package --file pom.xml -Pv24
-
-  build-vaadin25:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build (Vaadin 25)
-      run: mvn -B package --file pom.xml -Pv25
